# tgtgbot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  run.sh  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yaml
.tools-cfg/: .coveragerc  .towncrier.template.md  black-cfg.toml  bumpversion.cfg  mypy.ini  pylint-whitelist-dict.dic  pylintrc  pylintrc-test  towncrier.toml
tests/: conftest.py  pytest.ini  test_sanity.py
tests/functional/: test_functional.py
tests/unit/: test_tgtgbot_unit.py  test_unit.py
tgtgbot/: __init__.py  main.py
tgtgbot/config/: log_config.json
tgtgbot/tgtg_bot/: tgtg_bot.py
