[metadata]
name = tgtgbot
description = This service sends you a notification when your favorite Too Good To Go item is available.
long_description = file: README.md
license = PRIVATE
author = Maxime Caïtucoli
author_email = maxime.caitucoli@live.fr
provides = tgtgbot
url = https://github.com/etnberz/tgtgbot
download_url =
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Private :: Do Not Upload On Pypi

[options]
zip_safe = False
python_requires = >=3.9, <3.10
packages = find:
include_package_data = True
install_requires =
    tgtg==0.15.0

[options.extras_require]
tests =
	pytest~=6.0.0
	pytest-mock~=3.2.0

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
